--- a/app/src/main/res/layout/activity_pantalla_mejoras.xml
+++ b/app/src/main/res/layout/activity_pantalla_mejoras.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:text="Volver"
+        android:onClick="atras"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
